Adding description to the All_trash_wheel dataset

--- a/p8105_hw2_xy2672.md
+++ b/p8105_hw2_xy2672.md
@@ -140,7 +140,12 @@ All_Trash_Wheel_df =
   relocate(wheel)
 ```
 
-The combined
+The combined dataset include the three different trash wheels collection
+data, which is indicated by the `wheel` variable. There are a total of
+1188 observations, with 15 variables. The `sports_balls` variable
+contains some NA value because `Prof_Trash_df` and `Gwynnda_Trash_df` do
+not contain `sports_balls` data. Same applied for `Glass Bottles`
+because `Gwynnda_Trash_df` do not include this variable.
 
 Calculating the total weight of trash collected by Professor Trash
 Wheel:
