--- a/p8105_hw2_xy2672.md
+++ b/p8105_hw2_xy2672.md
@@ -174,3 +174,56 @@ Gwynnda_total_cigarette_june2022 =
 
 The total number of cigarette butts collected by Gwynnda in June of 2022
 is 18120.
+
+## Problem 3
+
+Read the Zip code file and clean it:
+
+``` r
+zipcode_df = 
+  read_csv("data/Zip Codes.csv") |> 
+  janitor::clean_names() |> 
+  select(county, zip_code, neighborhood)
+```
+
+    ## Rows: 322 Columns: 7
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (4): County, County Code, File Date, Neighborhood
+    ## dbl (3): State FIPS, County FIPS, ZipCode
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Read the Zip_zori file and clean it:
+
+``` r
+Zori_df = 
+  read_csv("data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv") |> 
+  janitor::clean_names() |> 
+  rename(zip_code = region_name, county = county_name) |> 
+  mutate(
+    county = str_remove(county, " County")
+  ) |> 
+  select(-state_name, -region_type)
+```
+
+    ## Rows: 149 Columns: 125
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr   (6): RegionType, StateName, State, City, Metro, CountyName
+    ## dbl (119): RegionID, SizeRank, RegionName, 2015-01-31, 2015-02-28, 2015-03-3...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Join the dataset together:
+
+``` r
+Zori_zipcode_df = Zori_df |> 
+  left_join(zipcode_df, by = c("county", "zip_code")) |> 
+  relocate(zip_code, state, city, county)
+```
+
+The dataset has 149 observations. There are 149 unique zipcodes
+included. There are5 unique counties included.
