--- a/p8105_hw2_xy2672.md
+++ b/p8105_hw2_xy2672.md
@@ -222,8 +222,55 @@ Join the dataset together:
 ``` r
 Zori_zipcode_df = Zori_df |> 
   left_join(zipcode_df, by = c("county", "zip_code")) |> 
-  relocate(zip_code, state, city, county)
+  relocate(zip_code, state, city, county, neighborhood)
 ```
 
 The dataset has 149 observations. There are 149 unique zipcodes
-included. There are5 unique counties included.
+included. There are 5 unique counties included.
+
+Finding missing zipcodes:
+
+``` r
+missing_zips_df = zipcode_df |>
+  anti_join(Zori_df, by = "zip_code")
+```
+
+Many zipcodes are missing because there are no neighborhoods associated
+with them, so `Zori_df` exclude them because there are no prices that
+can be found. This is reflected in the `zipcode_df` if the
+`neighborhood` variable does not have any value.
+
+Comparing rental prices between Jan.2020 and Jan.2021:
+
+``` r
+Jan_price_drop_df = Zori_zipcode_df |> 
+  select(
+    zip_code,
+    county,                   
+    neighborhood,
+    jan2020 = x2020_01_31,
+    jan2021 = x2021_01_31)|>
+  filter(!is.na(jan2020), !is.na(jan2021)) |>
+  mutate(change = jan2021 - jan2020) |>
+  arrange(change) |>
+  slice_head(n = 10) |> 
+  knitr::kable()
+print(Jan_price_drop_df)
+```
+
+    ## 
+    ## 
+    ## | zip_code|county   |neighborhood                  |  jan2020|  jan2021|    change|
+    ## |--------:|:--------|:-----------------------------|--------:|--------:|---------:|
+    ## |    10007|New York |Lower Manhattan               | 6334.211| 5421.614| -912.5966|
+    ## |    10069|New York |NA                            | 4623.042| 3874.918| -748.1245|
+    ## |    10009|New York |Lower East Side               | 3406.442| 2692.187| -714.2550|
+    ## |    10016|New York |Gramercy Park and Murray Hill | 3731.135| 3019.431| -711.7045|
+    ## |    10001|New York |Chelsea and Clinton           | 4108.098| 3397.648| -710.4499|
+    ## |    10002|New York |Lower East Side               | 3645.416| 2935.113| -710.3028|
+    ## |    10004|New York |Lower Manhattan               | 3149.658| 2443.697| -705.9608|
+    ## |    10038|New York |Lower Manhattan               | 3573.201| 2875.616| -697.5853|
+    ## |    10012|New York |Greenwich Village and Soho    | 3628.566| 2942.344| -686.2218|
+    ## |    10010|New York |Gramercy Park and Murray Hill | 3697.284| 3012.353| -684.9304|
+
+The ten biggest drops in the price are shown in the table.
